últimas atualizações, falta apenas o logotipo

--- a/index.html
+++ b/index.html
@@ -12,10 +12,11 @@
         <h1>Contador de Caracteres e Palavras</h1>
         <div class="field">
             <label for="input">Digite ou cole abaixo o seu texto:</label>
-            <textarea name="input" id="input" rows="5"></textarea>
+            <textarea name="input" id="input" rows="15"></textarea>
         </div>
         <div class="counter">0 Caracteres(s)</div>
         <button id="toggle">Contar palavras</button>
+        <p>Clique no botão para alterar o contador</p>
     </div>
 </body>
 </html>
