Atualização de logotipo do projeto

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Contador de Caracteres e Palavras</h1>
+        <img src="imagens/logo.jpg.jpg" alt="Logotipo">
         <div class="field">
             <label for="input">Digite ou cole abaixo o seu texto:</label>
             <textarea name="input" id="input" rows="15"></textarea>
