Atualização do título

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>GoLiPe - Contador de Caracteres e Palavras</title>
+<title>GOLIPE - Contador de Caracteres e Palavras</title>
 <link rel="stylesheet" href="styles.css">
 <script src="scripts.js" defer></script>
 </head>
