--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>GOLIPE - Contador de Caracteres e Palavras</title>
+<link rel="icon" href="imagens/favicon.png" type="image/x-icon">
 <link rel="stylesheet" href="styles.css">
 <script src="scripts.js" defer></script>
 </head>
